tests/compiletests/ui/spirv-attr/bool-inputs-err.stderr
error: entry-point parameter cannot contain `bool`s
  --> $DIR/bool-inputs-err.rs:13:12
   |
LL |     input: bool,
   |            ^^^^

error: Type not supported in Input or Output declarations
  --> $DIR/bool-inputs-err.rs:13:12
   |
LL |     input: bool,
   |            ^^^^

error: entry-point parameter cannot contain `bool`s
  --> $DIR/bool-inputs-err.rs:14:13
   |
LL |     output: &mut bool,
   |             ^^^^^^^^^

error: Type not supported in Input or Output declarations
  --> $DIR/bool-inputs-err.rs:14:13
   |
LL |     output: &mut bool,
   |             ^^^^^^^^^

error: entry-point parameter cannot contain `bool`s
  --> $DIR/bool-inputs-err.rs:15:35
   |
LL |     #[spirv(push_constant)] push: &bool,
   |                                   ^^^^^

error: entry-point parameter cannot contain `bool`s
  --> $DIR/bool-inputs-err.rs:16:32
   |
LL |     #[spirv(uniform)] uniform: &Boolthing,
   |                                ^^^^^^^^^^

error: aborting due to 6 previous errors

